# SoftRenderer

./: CMakeLists.txt  Design.md  LICENSE  README.md
SoftRenderer/: main.cpp
SoftRenderer/Core/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Maths.cpp  Maths.h  Model.cpp  Model.h  Pipeline.h  Platform.h  TGAImage.cpp  TGAImage.h  Texture.cpp  Texture.h
SoftRenderer/Platform/: Win32.cpp  Win32.h
